# pvaccess-rs

./: README.md  old-todo.md  script.sh  todo.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
adrs/: 1-horizontal-autoscaling.md  2-restructuring.md  3-framed-read-write.md
deploy/helm/: configmap.yaml  deployment.yaml
easy-pv/: Cargo.toml  todo.md
easy-pv/easy-pv-client/: Cargo.toml
easy-pv/easy-pv-client/src/: main.rs
easy-pv/easy-pv-datatypes/: Cargo.toml
easy-pv/easy-pv-datatypes/src/: channel.rs  codec.rs  frame.rs  header.rs  lib.rs  pv_fielddesc.rs
easy-pv/easy-pv-datatypes/src/messages/: flags.rs  into.rs  mod.rs  pv_beacon.rs  pv_echo.rs  pv_validation.rs
easy-pv/easy-pv-lib-client/: Cargo.toml
easy-pv/easy-pv-lib-client/src/: client.rs  command.rs  config.rs  helpers.rs  lib.rs  state.rs  tcp.rs
easy-pv/easy-pv-lib-server/: Cargo.toml
easy-pv/easy-pv-lib-server/src/: async_feature.rs  config.rs  lib.rs  server.rs  state.rs
easy-pv/easy-pv-lib-server/src/features/: echo.rs  mod.rs  ping.rs
easy-pv/easy-pv-server/: Cargo.toml  dev-server.toml
easy-pv/easy-pv-server/src/: main.rs
pvaccess/: Cargo.toml
pvaccess/crates/client/: Cargo.toml
pvaccess/crates/client-lib/: Cargo.toml
pvaccess/crates/client-lib/src/: client.rs  lib.rs
pvaccess/crates/client/config/: client.toml
pvaccess/crates/client/src/: main.rs  with_schema.rs
pvaccess/crates/msg-server/: Cargo.toml  with_schema.rs
pvaccess/crates/msg-server/config/: server.toml
pvaccess/crates/msg-server/src/: main.rs
pvaccess/crates/protocol/: Cargo.toml  README.md
pvaccess/crates/protocol/src/: channel.rs  client_manager.rs  lib.rs  protocol.rs  pv_admin.rs  pv_beacon.rs  pv_channel.rs  pv_core.rs  pv_echo.rs  pv_search.rs  pv_validation.rs  with_msgpack.rs  with_msgpack_memory.rs  with_msgpack_redis.rs  with_pvaccess.rs
pvaccess/crates/protocol/src/msgpack/: memory_channel.rs  mod.rs  msgpack_msg_types.rs  with_msgpack_memory.rs  with_msgpack_redis.rs
pvaccess/crates/protocol/src/pvaccess/: client_manager.rs  mod.rs  pv_admin.rs  pv_beacon.rs  pv_channel.rs  pv_core.rs  pv_fielddesc.rs  pv_validation.rs  with_pvaccess.rs
pvaccess/crates/pv-server/: Cargo.toml
pvaccess/crates/pv-server/config/: server.toml
pvaccess/crates/pv-server/src/: cache.rs  main.rs  websocket.rs
pvaccess/crates/server/: Cargo.toml  with_schema.rs
pvaccess/crates/server/src/: main.rs  redis_client.rs
pvaccess/examples/: many_clients.rs
pvaccess/examples/hello/: Cargo.toml
pvaccess/examples/hello/src/: main.rs
pvaccess/examples/multi_client/: Cargo.toml
pvaccess/examples/multi_client/src/: main.rs
pvaccess/full_server/: Cargo.toml
pvaccess/full_server/src/: main.rs
pvaccess/iters/: Cargo.toml
pvaccess/iters/src/: main.rs
pvaccess/tests/: create_channel.rs  metadata_request.rs  test_client.rs  validate_schema.rs
