[package]
name = "easy-pv-datatypes"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = { version = "1.5" }
uuid = { version = "1.16.0", features = ["v4"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
anyhow = "1.0.97"
tokio-util = { version = "0.7.14", features = ["codec"] }
bytes = "1.10.1"
futures = "0.3.31"
bitflags = "2.9.0"
