[package]
name = "easy-pv-lib-client"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
anyhow = "1.0.97"
tokio-util = "0.7.14"
easy-pv-datatypes = { path = "../easy-pv-datatypes" }
futures = "0.3.31"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }


