[package]
name = "easy-pv-lib-server"
version = "0.1.0"
edition = "2024"

[dependencies]
easy-pv-datatypes = { path = "../easy-pv-datatypes" }
tokio = { version = "1.44.2", features = ["full"] }
bincode = "2.0.1"
config = { version = "0.15.11", features = ["toml"] }
serde = { version = "1.0.219", features = ["derive"] }
rmp-serde = "1.3.0"
uuid = { version = "1.16.0", features = ["v4"] }
async-trait = "0.1"
anyhow = "1.0.97"

[features]
ping = []
echo = []
default = ["ping"]