[package]
name = "easy-pv-lib-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1"
bincode = "2.0.1"
byteorder = { version = "1.5" }
config = { version = "0.15.11", features = ["toml"] }
easy-pv-datatypes = { path = "../easy-pv-datatypes" }
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
tokio-util = "0.7.14"
bytes = "1.10.1"
futures = "0.3.31"

[features]
ping = []
echo = []
default = ["ping"]
