[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
rmp-serde = "1.3.0"
serde_json = "1.0.1"
schemars = "0.8.22"
regex = "1.11.1"
tokio = { version = "1.44.0", features = ["full"] }
async-trait = "0.1.88"
bincode = "2.0.1"
byteorder = "1.5.0"
uuid = "1.16.0"

[features]
with_msgpack_memory = []
with_msgpack_redis = []
with_pvaccess = []
default = ["with_msgpack_memory", "with_pvaccess", "with_msgpack_redis"]
